images/alpine/3.12.1/README.md
## alpine
![](https://img.shields.io/static/v1?label=tag&message=3.12.1&color=blue)
## dev-tools
```
```

## etc/shadow
```
  - root:!::0:::::
  - bin:!::0:::::
  - daemon:!::0:::::
  - adm:!::0:::::
  - lp:!::0:::::
  - sync:!::0:::::
  - shutdown:!::0:::::
  - halt:!::0:::::
  - mail:!::0:::::
  - news:!::0:::::
  - uucp:!::0:::::
  - operator:!::0:::::
  - man:!::0:::::
  - postmaster:!::0:::::
  - cron:!::0:::::
  - ftp:!::0:::::
  - sshd:!::0:::::
  - at:!::0:::::
  - squid:!::0:::::
  - xfs:!::0:::::
  - games:!::0:::::
  - cyrus:!::0:::::
  - vpopmail:!::0:::::
  - ntp:!::0:::::
  - smmsp:!::0:::::
  - guest:!::0:::::
  - nobody:!::0:::::
```

## etc/passwd
```
  - root:x:0:0:root:/root:/bin/ash
  - bin:x:1:1:bin:/bin:/sbin/nologin
  - daemon:x:2:2:daemon:/sbin:/sbin/nologin
  - adm:x:3:4:adm:/var/adm:/sbin/nologin
  - lp:x:4:7:lp:/var/spool/lpd:/sbin/nologin
  - sync:x:5:0:sync:/sbin:/bin/sync
  - shutdown:x:6:0:shutdown:/sbin:/sbin/shutdown
  - halt:x:7:0:halt:/sbin:/sbin/halt
  - mail:x:8:12:mail:/var/mail:/sbin/nologin
  - news:x:9:13:news:/usr/lib/news:/sbin/nologin
  - uucp:x:10:14:uucp:/var/spool/uucppublic:/sbin/nologin
  - operator:x:11:0:operator:/root:/sbin/nologin
  - man:x:13:15:man:/usr/man:/sbin/nologin
  - postmaster:x:14:12:postmaster:/var/mail:/sbin/nologin
  - cron:x:16:16:cron:/var/spool/cron:/sbin/nologin
  - ftp:x:21:21::/var/lib/ftp:/sbin/nologin
  - sshd:x:22:22:sshd:/dev/null:/sbin/nologin
  - at:x:25:25:at:/var/spool/cron/atjobs:/sbin/nologin
  - squid:x:31:31:Squid:/var/cache/squid:/sbin/nologin
  - xfs:x:33:33:X Font Server:/etc/X11/fs:/sbin/nologin
  - games:x:35:35:games:/usr/games:/sbin/nologin
  - cyrus:x:85:12::/usr/cyrus:/sbin/nologin
  - vpopmail:x:89:89::/var/vpopmail:/sbin/nologin
  - ntp:x:123:123:NTP:/var/empty:/sbin/nologin
  - smmsp:x:209:209:smmsp:/var/spool/mqueue:/sbin/nologin
  - guest:x:405:100:guest:/dev/null:/sbin/nologin
  - nobody:x:65534:65534:nobody:/:/sbin/nologin
```

## gtfo
```
  - /usr/bin/nc
  - /usr/bin/wget
  - /bin/ping
  - /bin/base64
```

## hidden-files
```
```

## listening-ports
```
```

## pass-policy
```
```

## path-executables
```
 - /usr/bin/ldd
 - /usr/bin/scanelf
 - /usr/bin/getent
 - /usr/bin/iconv
 - /usr/bin/getconf
 - /usr/bin/ssl_client
 - /sbin/apk
 - /sbin/ldconfig
 - /sbin/mkmntdirs
 - /bin/busybox
```

## root-structure
```
 - bin
 - dev
 - etc
 - home
 - lib
 - media
 - mnt
 - opt
 - proc
 - root
 - run
 - sbin
 - srv
 - sys
 - tmp
 - usr
 - var
```

## ssl-certs
```
 - subject=CN = ACCVRAIZ1, OU = PKIACCV, O = ACCV, C = ES
 - subject=C = ES, O = FNMT-RCM, OU = AC RAIZ FNMT-RCM
 - subject=C = IT, L = Milan, O = Actalis S.p.A./03358520967, CN = Actalis Authentication Root CA
 - subject=C = US, O = AffirmTrust, CN = AffirmTrust Commercial
 - subject=C = US, O = AffirmTrust, CN = AffirmTrust Networking
 - subject=C = US, O = AffirmTrust, CN = AffirmTrust Premium
 - subject=C = US, O = AffirmTrust, CN = AffirmTrust Premium ECC
 - subject=C = US, O = Amazon, CN = Amazon Root CA 1
 - subject=C = US, O = Amazon, CN = Amazon Root CA 2
 - subject=C = US, O = Amazon, CN = Amazon Root CA 3
 - subject=C = US, O = Amazon, CN = Amazon Root CA 4
 - subject=CN = Atos TrustedRoot 2011, O = Atos, C = DE
 - subject=C = ES, CN = Autoridad de Certificacion Firmaprofesional CIF A62634068
 - subject=C = IE, O = Baltimore, OU = CyberTrust, CN = Baltimore CyberTrust Root
 - subject=C = NO, O = Buypass AS-983163327, CN = Buypass Class 2 Root CA
 - subject=C = NO, O = Buypass AS-983163327, CN = Buypass Class 3 Root CA
 - subject=C = SK, L = Bratislava, O = Disig a.s., CN = CA Disig Root R2
 - subject=C = CN, O = China Financial Certification Authority, CN = CFCA EV ROOT
 - subject=C = GB, ST = Greater Manchester, L = Salford, O = COMODO CA Limited, CN = COMODO Certification Authority
 - subject=C = GB, ST = Greater Manchester, L = Salford, O = COMODO CA Limited, CN = COMODO ECC Certification Authority
 - subject=C = GB, ST = Greater Manchester, L = Salford, O = COMODO CA Limited, CN = COMODO RSA Certification Authority
 - subject=C = FR, O = Dhimyotis, CN = Certigna
 - subject=C = FR, O = Dhimyotis, OU = 0002 48146308100036, CN = Certigna Root CA
 - subject=C = PL, O = Unizeto Technologies S.A., OU = Certum Certification Authority, CN = Certum Trusted Network CA
 - subject=C = PL, O = Unizeto Technologies S.A., OU = Certum Certification Authority, CN = Certum Trusted Network CA 2
 - subject=C = EU, L = Madrid (see current address at www.camerfirma.com/address), serialNumber = A82743287, O = AC Camerfirma S.A., CN = Chambers of Commerce Root - 2008
 - subject=C = GB, ST = Greater Manchester, L = Salford, O = Comodo CA Limited, CN = AAA Certificate Services
 - subject=O = "Cybertrust, Inc", CN = Cybertrust Global Root
 - subject=C = DE, O = D-Trust GmbH, CN = D-TRUST Root Class 3 CA 2 2009
 - subject=C = DE, O = D-Trust GmbH, CN = D-TRUST Root Class 3 CA 2 EV 2009
 - subject=O = Digital Signature Trust Co., CN = DST Root CA X3
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Assured ID Root CA
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Assured ID Root G2
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Assured ID Root G3
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Global Root CA
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Global Root G2
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Global Root G3
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert High Assurance EV Root CA
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Trusted Root G4
 - subject=C = TR, L = Ankara, O = E-Tu\C4\9Fra EBG Bili\C5\9Fim Teknolojileri ve Hizmetleri A.\C5\9E., OU = E-Tugra Sertifikasyon Merkezi, CN = E-Tugra Certification Authority
 - subject=C = ES, O = Agencia Catalana de Certificacio (NIF Q-0801176-I), OU = Serveis Publics de Certificacio, OU = Vegeu https://www.catcert.net/verarrel (c)03, OU = Jerarquia Entitats de Certificacio Catalanes, CN = EC-ACC
 - subject=C = EE, O = AS Sertifitseerimiskeskus, CN = EE Certification Centre Root CA, emailAddress = pki@sk.ee
 - subject=O = Entrust.net, OU = www.entrust.net/CPS_2048 incorp. by ref. (limits liab.), OU = (c) 1999 Entrust.net Limited, CN = Entrust.net Certification Authority (2048)
 - subject=C = US, O = "Entrust, Inc.", OU = www.entrust.net/CPS is incorporated by reference, OU = "(c) 2006 Entrust, Inc.", CN = Entrust Root Certification Authority
 - subject=C = US, O = "Entrust, Inc.", OU = See www.entrust.net/legal-terms, OU = "(c) 2012 Entrust, Inc. - for authorized use only", CN = Entrust Root Certification Authority - EC1
 - subject=C = US, O = "Entrust, Inc.", OU = See www.entrust.net/legal-terms, OU = "(c) 2009 Entrust, Inc. - for authorized use only", CN = Entrust Root Certification Authority - G2
 - subject=C = US, O = "Entrust, Inc.", OU = See www.entrust.net/legal-terms, OU = "(c) 2015 Entrust, Inc. - for authorized use only", CN = Entrust Root Certification Authority - G4
 - subject=C = CN, O = "GUANG DONG CERTIFICATE AUTHORITY CO.,LTD.", CN = GDCA TrustAUTH R5 ROOT
 - subject=C = US, O = Google Trust Services LLC, CN = GTS Root R1
 - subject=C = US, O = Google Trust Services LLC, CN = GTS Root R2
 - subject=C = US, O = Google Trust Services LLC, CN = GTS Root R3
 - subject=C = US, O = Google Trust Services LLC, CN = GTS Root R4
 - subject=C = US, O = GeoTrust Inc., CN = GeoTrust Global CA
 - subject=C = US, O = GeoTrust Inc., CN = GeoTrust Primary Certification Authority
 - subject=C = US, O = GeoTrust Inc., OU = (c) 2007 GeoTrust Inc. - For authorized use only, CN = GeoTrust Primary Certification Authority - G2
 - subject=C = US, O = GeoTrust Inc., OU = (c) 2008 GeoTrust Inc. - For authorized use only, CN = GeoTrust Primary Certification Authority - G3
 - subject=C = US, O = GeoTrust Inc., CN = GeoTrust Universal CA
 - subject=C = US, O = GeoTrust Inc., CN = GeoTrust Universal CA 2
 - subject=OU = GlobalSign ECC Root CA - R4, O = GlobalSign, CN = GlobalSign
 - subject=OU = GlobalSign ECC Root CA - R5, O = GlobalSign, CN = GlobalSign
 - subject=C = BE, O = GlobalSign nv-sa, OU = Root CA, CN = GlobalSign Root CA
 - subject=OU = GlobalSign Root CA - R2, O = GlobalSign, CN = GlobalSign
 - subject=OU = GlobalSign Root CA - R3, O = GlobalSign, CN = GlobalSign
 - subject=OU = GlobalSign Root CA - R6, O = GlobalSign, CN = GlobalSign
 - subject=C = EU, L = Madrid (see current address at www.camerfirma.com/address), serialNumber = A82743287, O = AC Camerfirma S.A., CN = Global Chambersign Root - 2008
 - subject=C = US, O = "The Go Daddy Group, Inc.", OU = Go Daddy Class 2 Certification Authority
 - subject=C = US, ST = Arizona, L = Scottsdale, O = "GoDaddy.com, Inc.", CN = Go Daddy Root Certificate Authority - G2
 - subject=C = GR, L = Athens, O = Hellenic Academic and Research Institutions Cert. Authority, CN = Hellenic Academic and Research Institutions ECC RootCA 2015
 - subject=C = GR, O = Hellenic Academic and Research Institutions Cert. Authority, CN = Hellenic Academic and Research Institutions RootCA 2011
 - subject=C = GR, L = Athens, O = Hellenic Academic and Research Institutions Cert. Authority, CN = Hellenic Academic and Research Institutions RootCA 2015
 - subject=C = HK, O = Hongkong Post, CN = Hongkong Post Root CA 1
 - subject=C = HK, ST = Hong Kong, L = Hong Kong, O = Hongkong Post, CN = Hongkong Post Root CA 3
 - subject=C = US, O = Internet Security Research Group, CN = ISRG Root X1
 - subject=C = US, O = IdenTrust, CN = IdenTrust Commercial Root CA 1
 - subject=C = US, O = IdenTrust, CN = IdenTrust Public Sector Root CA 1
 - subject=C = ES, O = IZENPE S.A., CN = Izenpe.com
 - subject=C = LU, O = LuxTrust S.A., CN = LuxTrust Global Root 2
 - subject=C = HU, L = Budapest, O = Microsec Ltd., CN = Microsec e-Szigno Root CA 2009, emailAddress = info@e-szigno.hu
 - subject=C = HU, L = Budapest, O = NetLock Kft., OU = Tan\C3\BAs\C3\ADtv\C3\A1nykiad\C3\B3k (Certification Services), CN = NetLock Arany (Class Gold) F\C5\91tan\C3\BAs\C3\ADtv\C3\A1ny
 - subject=C = US, O = Network Solutions L.L.C., CN = Network Solutions Certificate Authority
 - subject=C = CH, O = WISeKey, OU = Copyright (c) 2005, OU = OISTE Foundation Endorsed, CN = OISTE WISeKey Global Root GA CA
 - subject=C = CH, O = WISeKey, OU = OISTE Foundation Endorsed, CN = OISTE WISeKey Global Root GB CA
 - subject=C = CH, O = WISeKey, OU = OISTE Foundation Endorsed, CN = OISTE WISeKey Global Root GC CA
 - subject=C = BM, O = QuoVadis Limited, OU = Root Certification Authority, CN = QuoVadis Root Certification Authority
 - subject=C = BM, O = QuoVadis Limited, CN = QuoVadis Root CA 1 G3
 - subject=C = BM, O = QuoVadis Limited, CN = QuoVadis Root CA 2
 - subject=C = BM, O = QuoVadis Limited, CN = QuoVadis Root CA 2 G3
 - subject=C = BM, O = QuoVadis Limited, CN = QuoVadis Root CA 3
 - subject=C = BM, O = QuoVadis Limited, CN = QuoVadis Root CA 3 G3
 - subject=C = US, ST = Texas, L = Houston, O = SSL Corporation, CN = SSL.com EV Root Certification Authority ECC
 - subject=C = US, ST = Texas, L = Houston, O = SSL Corporation, CN = SSL.com EV Root Certification Authority RSA R2
 - subject=C = US, ST = Texas, L = Houston, O = SSL Corporation, CN = SSL.com Root Certification Authority ECC
 - subject=C = US, ST = Texas, L = Houston, O = SSL Corporation, CN = SSL.com Root Certification Authority RSA
 - subject=C = PL, O = Krajowa Izba Rozliczeniowa S.A., CN = SZAFIR ROOT CA2
 - subject=C = JP, O = "Japan Certification Services, Inc.", CN = SecureSign RootCA11
 - subject=C = US, O = SecureTrust Corporation, CN = SecureTrust CA
 - subject=C = US, O = SecureTrust Corporation, CN = Secure Global CA
 - subject=C = JP, O = "SECOM Trust Systems CO.,LTD.", OU = Security Communication RootCA2
 - subject=C = JP, O = SECOM Trust.net, OU = Security Communication RootCA1
 - subject=C = FI, O = Sonera, CN = Sonera Class2 CA
 - subject=C = NL, O = Staat der Nederlanden, CN = Staat der Nederlanden EV Root CA
 - subject=C = NL, O = Staat der Nederlanden, CN = Staat der Nederlanden Root CA - G2
 - subject=C = NL, O = Staat der Nederlanden, CN = Staat der Nederlanden Root CA - G3
 - subject=C = US, O = "Starfield Technologies, Inc.", OU = Starfield Class 2 Certification Authority
 - subject=C = US, ST = Arizona, L = Scottsdale, O = "Starfield Technologies, Inc.", CN = Starfield Root Certificate Authority - G2
 - subject=C = US, ST = Arizona, L = Scottsdale, O = "Starfield Technologies, Inc.", CN = Starfield Services Root Certificate Authority - G2
 - subject=C = CH, O = SwissSign AG, CN = SwissSign Gold CA - G2
 - subject=C = CH, O = SwissSign AG, CN = SwissSign Silver CA - G2
 - subject=C = DE, O = T-Systems Enterprise Services GmbH, OU = T-Systems Trust Center, CN = T-TeleSec GlobalRoot Class 2
 - subject=C = DE, O = T-Systems Enterprise Services GmbH, OU = T-Systems Trust Center, CN = T-TeleSec GlobalRoot Class 3
 - subject=C = TR, L = Gebze - Kocaeli, O = Turkiye Bilimsel ve Teknolojik Arastirma Kurumu - TUBITAK, OU = Kamu Sertifikasyon Merkezi - Kamu SM, CN = TUBITAK Kamu SM SSL Kok Sertifikasi - Surum 1
 - subject=C = TW, O = TAIWAN-CA, OU = Root CA, CN = TWCA Global Root CA
 - subject=C = TW, O = TAIWAN-CA, OU = Root CA, CN = TWCA Root Certification Authority
 - subject=C = TW, O = Government Root Certification Authority
 - subject=O = TeliaSonera, CN = TeliaSonera Root CA v1
 - subject=C = PA, ST = Panama, L = Panama City, O = TrustCor Systems S. de R.L., OU = TrustCor Certificate Authority, CN = TrustCor ECA-1
 - subject=C = PA, ST = Panama, L = Panama City, O = TrustCor Systems S. de R.L., OU = TrustCor Certificate Authority, CN = TrustCor RootCert CA-1
 - subject=C = PA, ST = Panama, L = Panama City, O = TrustCor Systems S. de R.L., OU = TrustCor Certificate Authority, CN = TrustCor RootCert CA-2
 - subject=C = GB, O = Trustis Limited, OU = Trustis FPS Root CA
 - subject=C = CN, O = UniTrust, CN = UCA Extended Validation Root
 - subject=C = CN, O = UniTrust, CN = UCA Global G2 Root
 - subject=C = US, ST = New Jersey, L = Jersey City, O = The USERTRUST Network, CN = USERTrust ECC Certification Authority
 - subject=C = US, ST = New Jersey, L = Jersey City, O = The USERTRUST Network, CN = USERTrust RSA Certification Authority
 - subject=C = US, O = "VeriSign, Inc.", OU = VeriSign Trust Network, OU = "(c) 2007 VeriSign, Inc. - For authorized use only", CN = VeriSign Class 3 Public Primary Certification Authority - G4
 - subject=C = US, O = "VeriSign, Inc.", OU = VeriSign Trust Network, OU = "(c) 2006 VeriSign, Inc. - For authorized use only", CN = VeriSign Class 3 Public Primary Certification Authority - G5
 - subject=C = US, O = "VeriSign, Inc.", OU = VeriSign Trust Network, OU = "(c) 2008 VeriSign, Inc. - For authorized use only", CN = VeriSign Universal Root Certification Authority
 - subject=C = US, O = "VeriSign, Inc.", OU = VeriSign Trust Network, OU = "(c) 1999 VeriSign, Inc. - For authorized use only", CN = VeriSign Class 3 Public Primary Certification Authority - G3
 - subject=C = US, OU = www.xrampsecurity.com, O = XRamp Security Services Inc, CN = XRamp Global Certification Authority
 - subject=C = RO, O = certSIGN, OU = certSIGN ROOT CA
 - subject=C = TW, O = "Chunghwa Telecom Co., Ltd.", OU = ePKI Root Certification Authority
 - subject=C = US, OU = emSign PKI, O = eMudhra Inc, CN = emSign ECC Root CA - C3
 - subject=C = IN, OU = emSign PKI, O = eMudhra Technologies Limited, CN = emSign ECC Root CA - G3
 - subject=C = US, OU = emSign PKI, O = eMudhra Inc, CN = emSign Root CA - C1
 - subject=C = IN, OU = emSign PKI, O = eMudhra Technologies Limited, CN = emSign Root CA - G1
 - subject=C = US, O = "thawte, Inc.", OU = Certification Services Division, OU = "(c) 2006 thawte, Inc. - For authorized use only", CN = thawte Primary Root CA
 - subject=C = US, O = "thawte, Inc.", OU = "(c) 2007 thawte, Inc. - For authorized use only", CN = thawte Primary Root CA - G2
 - subject=C = US, O = "thawte, Inc.", OU = Certification Services Division, OU = "(c) 2008 thawte, Inc. - For authorized use only", CN = thawte Primary Root CA - G3
```

## world-writable-folders
```
 - /var/tmp
 - /sys/firmware
 - /proc/acpi
 - /proc/scsi
 - /dev/shm
 - /dev/mqueue
 - /tmp
```

## cves
```
   - CVE-2021-36159:
     - severity: CRITICAL
     - package: null
   - CVE-2021-30139:
     - severity: HIGH
     - package: null
   - CVE-2022-28391:
     - severity: CRITICAL
     - package: CVE-2022-28391 affecting package busybox 1.35.0
   - CVE-2021-28831:
     - severity: HIGH
     - package: busybox: invalid free or segmentation fault via malformed gzip data
   - CVE-2021-42378:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the getvar_i()
   - CVE-2021-42379:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the next_input_file()
   - CVE-2021-42380:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the clrvar()
   - CVE-2021-42381:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the hash_init()
   - CVE-2021-42382:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the getvar_s()
   - CVE-2021-42383:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the evaluate()
   - CVE-2021-42384:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the handle_special()
   - CVE-2021-42385:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the evaluate()
   - CVE-2021-42386:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the nvalloc()
   - CVE-2021-42374:
     - severity: MEDIUM
     - package: busybox: out-of-bounds read in unlzma applet leads to information leak and denial of service when crafted LZMA-compressed input is decompressed
   - CVE-2021-3711:
     - severity: CRITICAL
     - package: openssl: SM2 Decryption Buffer Overflow
   - CVE-2021-23840:
     - severity: HIGH
     - package: openssl: integer overflow in CipherUpdate
   - CVE-2021-3450:
     - severity: HIGH
     - package: openssl: CA certificate check bypass with X509_V_FLAG_X509_STRICT
   - CVE-2021-3712:
     - severity: HIGH
     - package: openssl: Read buffer overruns processing ASN.1 strings
   - CVE-2022-0778:
     - severity: HIGH
     - package: openssl: Infinite loop in BN_mod_sqrt() reachable when parsing certificates
   - CVE-2020-1971:
     - severity: MEDIUM
     - package: openssl: EDIPARTYNAME NULL pointer de-reference
   - CVE-2021-23841:
     - severity: MEDIUM
     - package: openssl: NULL pointer dereference in X509_issuer_and_serial_hash()
   - CVE-2021-3449:
     - severity: MEDIUM
     - package: openssl: NULL pointer dereference in signature_algorithms processing
   - CVE-2021-23839:
     - severity: LOW
     - package: openssl: incorrect SSLv2 rollback protection
   - CVE-2021-3711:
     - severity: CRITICAL
     - package: openssl: SM2 Decryption Buffer Overflow
   - CVE-2021-23840:
     - severity: HIGH
     - package: openssl: integer overflow in CipherUpdate
   - CVE-2021-3450:
     - severity: HIGH
     - package: openssl: CA certificate check bypass with X509_V_FLAG_X509_STRICT
   - CVE-2021-3712:
     - severity: HIGH
     - package: openssl: Read buffer overruns processing ASN.1 strings
   - CVE-2022-0778:
     - severity: HIGH
     - package: openssl: Infinite loop in BN_mod_sqrt() reachable when parsing certificates
   - CVE-2020-1971:
     - severity: MEDIUM
     - package: openssl: EDIPARTYNAME NULL pointer de-reference
   - CVE-2021-23841:
     - severity: MEDIUM
     - package: openssl: NULL pointer dereference in X509_issuer_and_serial_hash()
   - CVE-2021-3449:
     - severity: MEDIUM
     - package: openssl: NULL pointer dereference in signature_algorithms processing
   - CVE-2021-23839:
     - severity: LOW
     - package: openssl: incorrect SSLv2 rollback protection
   - CVE-2020-28928:
     - severity: MEDIUM
     - package: In musl libc through 1.2.1, wcsnrtombs mishandles particular combinati ...
   - CVE-2020-28928:
     - severity: MEDIUM
     - package: In musl libc through 1.2.1, wcsnrtombs mishandles particular combinati ...
   - CVE-2022-28391:
     - severity: CRITICAL
     - package: CVE-2022-28391 affecting package busybox 1.35.0
   - CVE-2021-28831:
     - severity: HIGH
     - package: busybox: invalid free or segmentation fault via malformed gzip data
   - CVE-2021-42378:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the getvar_i()
   - CVE-2021-42379:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the next_input_file()
   - CVE-2021-42380:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the clrvar()
   - CVE-2021-42381:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the hash_init()
   - CVE-2021-42382:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the getvar_s()
   - CVE-2021-42383:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the evaluate()
   - CVE-2021-42384:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the handle_special()
   - CVE-2021-42385:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the evaluate()
   - CVE-2021-42386:
     - severity: HIGH
     - package: busybox: use-after-free in awk applet leads to denial of service and possibly code execution when processing a crafted awk pattern in the nvalloc()
   - CVE-2021-42374:
     - severity: MEDIUM
     - package: busybox: out-of-bounds read in unlzma applet leads to information leak and denial of service when crafted LZMA-compressed input is decompressed
   - CVE-2018-25032:
     - severity: HIGH
     - package: zlib: A flaw found in zlib v1.2.2.2 through zlib v1.2.11 when compressing (not decompressing!) certain inputs.
```
