images/alpine/3.12.10/README.md
## alpine
![](https://img.shields.io/static/v1?label=tag&message=3.12.10&color=blue)
## dev-tools
```
```

## etc/shadow
```
  - root:!::0:::::
  - bin:!::0:::::
  - daemon:!::0:::::
  - adm:!::0:::::
  - lp:!::0:::::
  - sync:!::0:::::
  - shutdown:!::0:::::
  - halt:!::0:::::
  - mail:!::0:::::
  - news:!::0:::::
  - uucp:!::0:::::
  - operator:!::0:::::
  - man:!::0:::::
  - postmaster:!::0:::::
  - cron:!::0:::::
  - ftp:!::0:::::
  - sshd:!::0:::::
  - at:!::0:::::
  - squid:!::0:::::
  - xfs:!::0:::::
  - games:!::0:::::
  - cyrus:!::0:::::
  - vpopmail:!::0:::::
  - ntp:!::0:::::
  - smmsp:!::0:::::
  - guest:!::0:::::
  - nobody:!::0:::::
```

## etc/passwd
```
  - root:x:0:0:root:/root:/bin/ash
  - bin:x:1:1:bin:/bin:/sbin/nologin
  - daemon:x:2:2:daemon:/sbin:/sbin/nologin
  - adm:x:3:4:adm:/var/adm:/sbin/nologin
  - lp:x:4:7:lp:/var/spool/lpd:/sbin/nologin
  - sync:x:5:0:sync:/sbin:/bin/sync
  - shutdown:x:6:0:shutdown:/sbin:/sbin/shutdown
  - halt:x:7:0:halt:/sbin:/sbin/halt
  - mail:x:8:12:mail:/var/mail:/sbin/nologin
  - news:x:9:13:news:/usr/lib/news:/sbin/nologin
  - uucp:x:10:14:uucp:/var/spool/uucppublic:/sbin/nologin
  - operator:x:11:0:operator:/root:/sbin/nologin
  - man:x:13:15:man:/usr/man:/sbin/nologin
  - postmaster:x:14:12:postmaster:/var/mail:/sbin/nologin
  - cron:x:16:16:cron:/var/spool/cron:/sbin/nologin
  - ftp:x:21:21::/var/lib/ftp:/sbin/nologin
  - sshd:x:22:22:sshd:/dev/null:/sbin/nologin
  - at:x:25:25:at:/var/spool/cron/atjobs:/sbin/nologin
  - squid:x:31:31:Squid:/var/cache/squid:/sbin/nologin
  - xfs:x:33:33:X Font Server:/etc/X11/fs:/sbin/nologin
  - games:x:35:35:games:/usr/games:/sbin/nologin
  - cyrus:x:85:12::/usr/cyrus:/sbin/nologin
  - vpopmail:x:89:89::/var/vpopmail:/sbin/nologin
  - ntp:x:123:123:NTP:/var/empty:/sbin/nologin
  - smmsp:x:209:209:smmsp:/var/spool/mqueue:/sbin/nologin
  - guest:x:405:100:guest:/dev/null:/sbin/nologin
  - nobody:x:65534:65534:nobody:/:/sbin/nologin
```

## gtfo
```
  - /usr/bin/nc
  - /usr/bin/wget
  - /bin/ping
  - /bin/base64
```

## hidden-files
```
```

## listening-ports
```
```

## pass-policy
```
```

## path-executables
```
 - /usr/bin/ldd
 - /usr/bin/scanelf
 - /usr/bin/getent
 - /usr/bin/iconv
 - /usr/bin/getconf
 - /usr/bin/ssl_client
 - /sbin/apk
 - /sbin/ldconfig
 - /sbin/mkmntdirs
 - /bin/busybox
```

## root-structure
```
 - bin
 - dev
 - etc
 - home
 - lib
 - media
 - mnt
 - opt
 - proc
 - root
 - run
 - sbin
 - srv
 - sys
 - tmp
 - usr
 - var
```

## ssl-certs
```
 - subject=CN = ACCVRAIZ1, OU = PKIACCV, O = ACCV, C = ES
 - subject=C = ES, O = FNMT-RCM, OU = AC RAIZ FNMT-RCM
 - subject=C = ES, O = FNMT-RCM, OU = Ceres, organizationIdentifier = VATES-Q2826004J, CN = AC RAIZ FNMT-RCM SERVIDORES SEGUROS
 - subject=serialNumber = G63287510, C = ES, O = ANF Autoridad de Certificacion, OU = ANF CA Raiz, CN = ANF Secure Server Root CA
 - subject=C = IT, L = Milan, O = Actalis S.p.A./03358520967, CN = Actalis Authentication Root CA
 - subject=C = US, O = AffirmTrust, CN = AffirmTrust Commercial
 - subject=C = US, O = AffirmTrust, CN = AffirmTrust Networking
 - subject=C = US, O = AffirmTrust, CN = AffirmTrust Premium
 - subject=C = US, O = AffirmTrust, CN = AffirmTrust Premium ECC
 - subject=C = US, O = Amazon, CN = Amazon Root CA 1
 - subject=C = US, O = Amazon, CN = Amazon Root CA 2
 - subject=C = US, O = Amazon, CN = Amazon Root CA 3
 - subject=C = US, O = Amazon, CN = Amazon Root CA 4
 - subject=CN = Atos TrustedRoot 2011, O = Atos, C = DE
 - subject=C = ES, CN = Autoridad de Certificacion Firmaprofesional CIF A62634068
 - subject=C = IE, O = Baltimore, OU = CyberTrust, CN = Baltimore CyberTrust Root
 - subject=C = NO, O = Buypass AS-983163327, CN = Buypass Class 2 Root CA
 - subject=C = NO, O = Buypass AS-983163327, CN = Buypass Class 3 Root CA
 - subject=C = SK, L = Bratislava, O = Disig a.s., CN = CA Disig Root R2
 - subject=C = CN, O = China Financial Certification Authority, CN = CFCA EV ROOT
 - subject=C = GB, ST = Greater Manchester, L = Salford, O = COMODO CA Limited, CN = COMODO Certification Authority
 - subject=C = GB, ST = Greater Manchester, L = Salford, O = COMODO CA Limited, CN = COMODO ECC Certification Authority
 - subject=C = GB, ST = Greater Manchester, L = Salford, O = COMODO CA Limited, CN = COMODO RSA Certification Authority
 - subject=C = FR, O = Dhimyotis, CN = Certigna
 - subject=C = FR, O = Dhimyotis, OU = 0002 48146308100036, CN = Certigna Root CA
 - subject=C = PL, O = Asseco Data Systems S.A., OU = Certum Certification Authority, CN = Certum EC-384 CA
 - subject=C = PL, O = Unizeto Technologies S.A., OU = Certum Certification Authority, CN = Certum Trusted Network CA
 - subject=C = PL, O = Unizeto Technologies S.A., OU = Certum Certification Authority, CN = Certum Trusted Network CA 2
 - subject=C = PL, O = Asseco Data Systems S.A., OU = Certum Certification Authority, CN = Certum Trusted Root CA
 - subject=C = GB, ST = Greater Manchester, L = Salford, O = Comodo CA Limited, CN = AAA Certificate Services
 - subject=C = DE, O = D-Trust GmbH, CN = D-TRUST Root Class 3 CA 2 2009
 - subject=C = DE, O = D-Trust GmbH, CN = D-TRUST Root Class 3 CA 2 EV 2009
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Assured ID Root CA
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Assured ID Root G2
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Assured ID Root G3
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Global Root CA
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Global Root G2
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Global Root G3
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert High Assurance EV Root CA
 - subject=C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Trusted Root G4
 - subject=C = TR, L = Ankara, O = E-Tu\C4\9Fra EBG Bili\C5\9Fim Teknolojileri ve Hizmetleri A.\C5\9E., OU = E-Tugra Sertifikasyon Merkezi, CN = E-Tugra Certification Authority
 - subject=C = ES, O = Agencia Catalana de Certificacio (NIF Q-0801176-I), OU = Serveis Publics de Certificacio, OU = Vegeu https://www.catcert.net/verarrel (c)03, OU = Jerarquia Entitats de Certificacio Catalanes, CN = EC-ACC
 - subject=O = Entrust.net, OU = www.entrust.net/CPS_2048 incorp. by ref. (limits liab.), OU = (c) 1999 Entrust.net Limited, CN = Entrust.net Certification Authority (2048)
 - subject=C = US, O = "Entrust, Inc.", OU = www.entrust.net/CPS is incorporated by reference, OU = "(c) 2006 Entrust, Inc.", CN = Entrust Root Certification Authority
 - subject=C = US, O = "Entrust, Inc.", OU = See www.entrust.net/legal-terms, OU = "(c) 2012 Entrust, Inc. - for authorized use only", CN = Entrust Root Certification Authority - EC1
 - subject=C = US, O = "Entrust, Inc.", OU = See www.entrust.net/legal-terms, OU = "(c) 2009 Entrust, Inc. - for authorized use only", CN = Entrust Root Certification Authority - G2
 - subject=C = US, O = "Entrust, Inc.", OU = See www.entrust.net/legal-terms, OU = "(c) 2015 Entrust, Inc. - for authorized use only", CN = Entrust Root Certification Authority - G4
 - subject=C = CN, O = "GUANG DONG CERTIFICATE AUTHORITY CO.,LTD.", CN = GDCA TrustAUTH R5 ROOT
 - subject=C = AT, O = e-commerce monitoring GmbH, CN = GLOBALTRUST 2020
 - subject=C = US, O = Google Trust Services LLC, CN = GTS Root R1
 - subject=C = US, O = Google Trust Services LLC, CN = GTS Root R2
 - subject=C = US, O = Google Trust Services LLC, CN = GTS Root R3
 - subject=C = US, O = Google Trust Services LLC, CN = GTS Root R4
 - subject=OU = GlobalSign ECC Root CA - R4, O = GlobalSign, CN = GlobalSign
 - subject=OU = GlobalSign ECC Root CA - R5, O = GlobalSign, CN = GlobalSign
 - subject=C = BE, O = GlobalSign nv-sa, OU = Root CA, CN = GlobalSign Root CA
 - subject=OU = GlobalSign Root CA - R3, O = GlobalSign, CN = GlobalSign
 - subject=OU = GlobalSign Root CA - R6, O = GlobalSign, CN = GlobalSign
 - subject=C = BE, O = GlobalSign nv-sa, CN = GlobalSign Root E46
 - subject=C = BE, O = GlobalSign nv-sa, CN = GlobalSign Root R46
 - subject=C = US, O = "The Go Daddy Group, Inc.", OU = Go Daddy Class 2 Certification Authority
 - subject=C = US, ST = Arizona, L = Scottsdale, O = "GoDaddy.com, Inc.", CN = Go Daddy Root Certificate Authority - G2
 - subject=C = GR, O = Hellenic Academic and Research Institutions CA, CN = HARICA TLS ECC Root CA 2021
 - subject=C = GR, O = Hellenic Academic and Research Institutions CA, CN = HARICA TLS RSA Root CA 2021
 - subject=C = GR, L = Athens, O = Hellenic Academic and Research Institutions Cert. Authority, CN = Hellenic Academic and Research Institutions ECC RootCA 2015
 - subject=C = GR, O = Hellenic Academic and Research Institutions Cert. Authority, CN = Hellenic Academic and Research Institutions RootCA 2011
 - subject=C = GR, L = Athens, O = Hellenic Academic and Research Institutions Cert. Authority, CN = Hellenic Academic and Research Institutions RootCA 2015
 - subject=C = TW, O = "Chunghwa Telecom Co., Ltd.", CN = HiPKI Root CA - G1
 - subject=C = HK, O = Hongkong Post, CN = Hongkong Post Root CA 1
 - subject=C = HK, ST = Hong Kong, L = Hong Kong, O = Hongkong Post, CN = Hongkong Post Root CA 3
 - subject=C = US, O = Internet Security Research Group, CN = ISRG Root X1
 - subject=C = US, O = Internet Security Research Group, CN = ISRG Root X2
 - subject=C = US, O = IdenTrust, CN = IdenTrust Commercial Root CA 1
 - subject=C = US, O = IdenTrust, CN = IdenTrust Public Sector Root CA 1
 - subject=C = ES, O = IZENPE S.A., CN = Izenpe.com
 - subject=C = HU, L = Budapest, O = Microsec Ltd., CN = Microsec e-Szigno Root CA 2009, emailAddress = info@e-szigno.hu
 - subject=C = US, O = Microsoft Corporation, CN = Microsoft ECC Root Certificate Authority 2017
 - subject=C = US, O = Microsoft Corporation, CN = Microsoft RSA Root Certificate Authority 2017
 - subject=C = KR, O = NAVER BUSINESS PLATFORM Corp., CN = NAVER Global Root Certification Authority
 - subject=C = HU, L = Budapest, O = NetLock Kft., OU = Tan\C3\BAs\C3\ADtv\C3\A1nykiad\C3\B3k (Certification Services), CN = NetLock Arany (Class Gold) F\C5\91tan\C3\BAs\C3\ADtv\C3\A1ny
 - subject=C = US, O = Network Solutions L.L.C., CN = Network Solutions Certificate Authority
 - subject=C = CH, O = WISeKey, OU = OISTE Foundation Endorsed, CN = OISTE WISeKey Global Root GB CA
 - subject=C = CH, O = WISeKey, OU = OISTE Foundation Endorsed, CN = OISTE WISeKey Global Root GC CA
 - subject=C = BM, O = QuoVadis Limited, CN = QuoVadis Root CA 1 G3
 - subject=C = BM, O = QuoVadis Limited, CN = QuoVadis Root CA 2
 - subject=C = BM, O = QuoVadis Limited, CN = QuoVadis Root CA 2 G3
 - subject=C = BM, O = QuoVadis Limited, CN = QuoVadis Root CA 3
 - subject=C = BM, O = QuoVadis Limited, CN = QuoVadis Root CA 3 G3
 - subject=C = US, ST = Texas, L = Houston, O = SSL Corporation, CN = SSL.com EV Root Certification Authority ECC
 - subject=C = US, ST = Texas, L = Houston, O = SSL Corporation, CN = SSL.com EV Root Certification Authority RSA R2
 - subject=C = US, ST = Texas, L = Houston, O = SSL Corporation, CN = SSL.com Root Certification Authority ECC
 - subject=C = US, ST = Texas, L = Houston, O = SSL Corporation, CN = SSL.com Root Certification Authority RSA
 - subject=C = PL, O = Krajowa Izba Rozliczeniowa S.A., CN = SZAFIR ROOT CA2
 - subject=C = JP, O = "Japan Certification Services, Inc.", CN = SecureSign RootCA11
 - subject=C = US, O = SecureTrust Corporation, CN = SecureTrust CA
 - subject=C = US, O = SecureTrust Corporation, CN = Secure Global CA
 - subject=C = JP, O = "SECOM Trust Systems CO.,LTD.", OU = Security Communication RootCA2
 - subject=C = JP, O = SECOM Trust.net, OU = Security Communication RootCA1
 - subject=C = NL, O = Staat der Nederlanden, CN = Staat der Nederlanden EV Root CA
 - subject=C = US, O = "Starfield Technologies, Inc.", OU = Starfield Class 2 Certification Authority
 - subject=C = US, ST = Arizona, L = Scottsdale, O = "Starfield Technologies, Inc.", CN = Starfield Root Certificate Authority - G2
 - subject=C = US, ST = Arizona, L = Scottsdale, O = "Starfield Technologies, Inc.", CN = Starfield Services Root Certificate Authority - G2
 - subject=C = CH, O = SwissSign AG, CN = SwissSign Gold CA - G2
 - subject=C = CH, O = SwissSign AG, CN = SwissSign Silver CA - G2
 - subject=C = DE, O = T-Systems Enterprise Services GmbH, OU = T-Systems Trust Center, CN = T-TeleSec GlobalRoot Class 2
 - subject=C = DE, O = T-Systems Enterprise Services GmbH, OU = T-Systems Trust Center, CN = T-TeleSec GlobalRoot Class 3
 - subject=C = TR, L = Gebze - Kocaeli, O = Turkiye Bilimsel ve Teknolojik Arastirma Kurumu - TUBITAK, OU = Kamu Sertifikasyon Merkezi - Kamu SM, CN = TUBITAK Kamu SM SSL Kok Sertifikasi - Surum 1
 - subject=C = TW, O = TAIWAN-CA, OU = Root CA, CN = TWCA Global Root CA
 - subject=C = TW, O = TAIWAN-CA, OU = Root CA, CN = TWCA Root Certification Authority
 - subject=O = TeliaSonera, CN = TeliaSonera Root CA v1
 - subject=C = PA, ST = Panama, L = Panama City, O = TrustCor Systems S. de R.L., OU = TrustCor Certificate Authority, CN = TrustCor ECA-1
 - subject=C = PA, ST = Panama, L = Panama City, O = TrustCor Systems S. de R.L., OU = TrustCor Certificate Authority, CN = TrustCor RootCert CA-1
 - subject=C = PA, ST = Panama, L = Panama City, O = TrustCor Systems S. de R.L., OU = TrustCor Certificate Authority, CN = TrustCor RootCert CA-2
 - subject=C = US, ST = Illinois, L = Chicago, O = "Trustwave Holdings, Inc.", CN = Trustwave Global Certification Authority
 - subject=C = US, ST = Illinois, L = Chicago, O = "Trustwave Holdings, Inc.", CN = Trustwave Global ECC P256 Certification Authority
 - subject=C = US, ST = Illinois, L = Chicago, O = "Trustwave Holdings, Inc.", CN = Trustwave Global ECC P384 Certification Authority
 - subject=C = TN, O = Agence Nationale de Certification Electronique, CN = TunTrust Root CA
 - subject=C = CN, O = UniTrust, CN = UCA Extended Validation Root
 - subject=C = CN, O = UniTrust, CN = UCA Global G2 Root
 - subject=C = US, ST = New Jersey, L = Jersey City, O = The USERTRUST Network, CN = USERTrust ECC Certification Authority
 - subject=C = US, ST = New Jersey, L = Jersey City, O = The USERTRUST Network, CN = USERTrust RSA Certification Authority
 - subject=C = US, OU = www.xrampsecurity.com, O = XRamp Security Services Inc, CN = XRamp Global Certification Authority
 - subject=C = RO, O = certSIGN, OU = certSIGN ROOT CA
 - subject=C = RO, O = CERTSIGN SA, OU = certSIGN ROOT CA G2
 - subject=C = HU, L = Budapest, O = Microsec Ltd., organizationIdentifier = VATHU-23584497, CN = e-Szigno Root CA 2017
 - subject=C = TW, O = "Chunghwa Telecom Co., Ltd.", OU = ePKI Root Certification Authority
 - subject=C = US, OU = emSign PKI, O = eMudhra Inc, CN = emSign ECC Root CA - C3
 - subject=C = IN, OU = emSign PKI, O = eMudhra Technologies Limited, CN = emSign ECC Root CA - G3
 - subject=C = US, OU = emSign PKI, O = eMudhra Inc, CN = emSign Root CA - C1
 - subject=C = IN, OU = emSign PKI, O = eMudhra Technologies Limited, CN = emSign Root CA - G1
 - subject=C = CN, O = "iTrusChina Co.,Ltd.", CN = vTrus ECC Root CA
 - subject=C = CN, O = "iTrusChina Co.,Ltd.", CN = vTrus Root CA
```

## world-writable-folders
```
 - /var/tmp
 - /sys/firmware
 - /proc/acpi
 - /proc/scsi
 - /dev/shm
 - /dev/mqueue
 - /tmp
```

## cves
```
   - CVE-2022-28391:
     - severity: CRITICAL
     - package: CVE-2022-28391 affecting package busybox 1.35.0
   - CVE-2022-28391:
     - severity: CRITICAL
     - package: CVE-2022-28391 affecting package busybox 1.35.0
   - CVE-2018-25032:
     - severity: HIGH
     - package: zlib: A flaw found in zlib v1.2.2.2 through zlib v1.2.11 when compressing (not decompressing!) certain inputs.
```
